SF Primes/src/objects/Request_Contacts__c.object
<CustomObject>
    <description>Related contacts use by the Request Object for Project Opportunity Requests</description>
    <fields>
        <fullName>Company__c</fullName>
        <formula>IF( ISBLANK(Contact__r.Vendor_Company__c),  Contact__r.Account_Name_Text__c, Contact__r.Vendor_Company__c)</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Request Contacts</relationshipLabel>
        <relationshipName>Request_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Request Contacts</relationshipLabel>
        <relationshipName>Request_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Request Contact</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Request Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>